--- a/Estyles/main.css
+++ b/Estyles/main.css
@@ -32,4 +32,21 @@
   -webkit-transition: 1.5s;
   transition: 1.5s;
 }
+
+.buttons1 {
+  font-family: "Courier Prime", monospace !important;
+  font-size: 2rem !important;
+  color: rgba(0, 0, 0, 0.39) !important;
+  border-color: rgba(0, 0, 0, 0.39) !important;
+  background-color: antiquewhite !important;
+  border: 0px !important;
+}
+
+.buttons1:hover {
+  -webkit-transition: 1s !important;
+  transition: 1s !important;
+  background-color: antiquewhite !important;
+  -webkit-box-shadow: 9px 5px 5px 0px rgba(173, 179, 186, 0.68);
+          box-shadow: 9px 5px 5px 0px rgba(173, 179, 186, 0.68);
+}
 /*# sourceMappingURL=main.css.map */
