--- a/Estyles/parciales/_variables.scss
+++ b/Estyles/parciales/_variables.scss
@@ -1,3 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
 $fuente:'Courier Prime', monospace;
 $colorft:rgba(0, 0, 0, 0.39);
+$bshadow:9px 5px 5px 0px rgba(173, 179, 186, 0.68);
