--- a/Estyles/parciales/_variables.scss
+++ b/Estyles/parciales/_variables.scss
@@ -1,4 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
+// paleta de colores
+
+
+$Blanco: #ffffffff;
+$ColorMar: #896a67ff;
+$ColorLaurel: #a5b79eff;
+$ColorNegro: #080708ff;
+
+/* SCSS Gradient */
+$gradient-top: linear-gradient(0deg, #ffffffff, #896a67ff, #a5b79eff, #080708ff);
+$gradient-right: linear-gradient(90deg, #ffffffff, #896a67ff, #a5b79eff, #080708ff);
+$gradient-bottom: linear-gradient(180deg, #ffffffff, #896a67ff, #a5b79eff, #080708ff);
+$gradient-left: linear-gradient(270deg, #ffffffff, #896a67ff, #a5b79eff, #080708ff);
+$gradient-top-right: linear-gradient(45deg, #ffffffff, #896a67ff, #a5b79eff, #080708ff);
+$gradient-bottom-right: linear-gradient(135deg, #ffffffff, #896a67ff, #a5b79eff, #080708ff);
+$gradient-top-left: linear-gradient(225deg, #ffffffff, #896a67ff, #a5b79eff, #080708ff);
+$gradient-bottom-left: linear-gradient(315deg, #ffffffff, #896a67ff, #a5b79eff, #080708ff);
+$gradient-radial: radial-gradient(#ffffffff, #896a67ff, #a5b79eff, #080708ff);
 $fuente:'Courier Prime', monospace;
 $colorft:rgba(0, 0, 0, 0.39);
 $bshadow:9px 5px 5px 0px rgba(173, 179, 186, 0.68);
